Bug 285031 - Dragging multiple files shows one random icon attached to the mouse instead of all
Summary: Dragging multiple files shows one random icon attached to the mouse instead o...
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: general (other bugs)
Version First Reported In: 1.99
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Peter Penz
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-10-26 18:53 UTC by Kai Uwe Broulik
Modified: 2011-11-20 18:27 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.8.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Kai Uwe Broulik 2011-10-26 18:53:57 UTC
Version:           unspecified (using Devel) 
OS:                Linux

With the new view engine in Dolphin 2.0, if you drag multiple files, you don’t get that “pile of icons” attached to your mouse anymore when you drag but a (random?) icon of one of the selected icons.

Reproducible: Didn't try

Steps to Reproduce:
1. Open a folder in Dolphin 2.0
2. Select multiple files (e.g. two folders, a text file, and an image)

Actual Results:  
The item visible dragged (the icon attached to your mouse indicating what you actually drag) is just one folder, as if you dragged one folder.

Expected Results:  
All the four items are attached to the mouse pointer like before.
Comment 1 Peter Penz 2011-11-19 06:36:51 UTC
Git commit 03d6343af5647d8915667c4d31ce561c00afff24 by Peter Penz.
Committed on 19/11/2011 at 07:34.
Pushed by ppenz into branch 'master'.

Improve dragging pixmap

When dragging multiple files, those files should be shown as part
of the dragging pixmap like in Dolphin 1.7.

BUG: 285031
FIXED-IN: 4.8.0

M  +76   -13   dolphin/src/kitemviews/kfileitemlistview.cpp

http://commits.kde.org/kde-baseapps/03d6343af5647d8915667c4d31ce561c00afff24
Comment 2 Kai Uwe Broulik 2011-11-20 18:25:09 UTC
Thanks for that fix :)
Is it possible to have the drag icon big when only dragging one icon like without that fix?

(And the icons seem smaller than with the 1.7 dolphin)
Comment 3 Kai Uwe Broulik 2011-11-20 18:27:47 UTC
Oh, I just saw in your code that it is supposed to use the original icon size when dragging only one icon, this seems to not be working, though.